compiler/testData/diagnostics/tests/inference/kt46515.fir.kt
// WITH_STDLIB

fun bar() {
    listOf(1, 2, 3).<!NONE_APPLICABLE!>maxOf<!> <!UNRESOLVED_REFERENCE!>{ <!UNRESOLVED_REFERENCE!>foo<!> }<!>
}